tests/fixtures/invalid/break-9.py
for i in [1, 2]:  # Check 3
    v = 1
    # Lorem ipsum dolor sit amet
    break

for i in [1, 2]:  # Check 4
    v = 1
    """
    Lorem ipsum dolor sit amet
    """
    break

for i in [1, 2]:  # Check 5
    a = """
    Multiline string assignment
    """
    break

for i in [1, 2]:  # Check 6
    v = 1
    break

for i in [1, 2]:  # Check 7
    break
    break

for i in [1, 2]:  # Check 8
    print(1)
    break

for i in [1, 2]:  # Check 9
    break
    print(1)

for i in [1, 2]:  # Check 10
    print(1)
    break
    print(1)
